tests/fixtures/invalid/none_bitor_float.py
# Cannot bitwise OR None and Float
x: float = None | 1.0
